Fri Jun 17 12:31:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PI_Server/*:
          First commit of the PI_Server library. Will contain the parts
          of the PortableServer that are dependent on PortableInterceptors.
          These files will be used soon when the MPC files are updated

Fri Jun 17 11:46:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/DLL_ORB/client.cpp:
          Fixed process_directive call

Fri Jun 17 09:56:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB.cpp:
          Corrected wrong compare in resolve_initial_references

Fri Jun 17 09:50:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Param_Test/Param_Test.mpc:
          Added explicit after so that we don't compile the same idl file
          at the same time multiple times

Fri Jun 17 09:24:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB.{h,cpp}:
          Removed some unneeded emulated exeption macros

Fri Jun 17 09:20:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Nested_Upcall_Crash/Nested_Upcall_Crash.mpc:
          Fixed typo in exename, wanted to commit this yesterday but couldn't
          reach cvs

Fri Jun 17 09:11:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/DLL_ORB/client.cpp:
        * tests/DLL_ORB/server.cpp:
        * orbsvcs/orbsvcs/PortableGroup/PortableGroup_ORBInitializer.cpp:
          Use the new macro ACE_DYNAMIC_SERVICE_DIRECTIVE to load the
          libraries

Fri Jun 17 09:09:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_1551_Regression/test.mpc:
          Simplified this mpc file

Fri Jun 17 09:56:44 2005  Simon McQueen  <sm@prismtech.com>

        * tao/Valuetype/ValueBase.cpp:

          Add support for stream encoded repository ID indirection as per
          "15.3.4.3 Scope of the Indirections" in 02-06-33.
          This fixes bug #2156.
